--- a/AI_Project2/nbproject/project.properties
+++ b/AI_Project2/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=ai_project2.AI_Project2
+main.class=ai_project2.GameDriver
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
